# vimsouls-editor

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  main.cpp  main.qml
